--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@devmehq/email-validator-js": "^1.0.19",
     "@emailjs/browser": "^4.3.3",
     "@ramonak/react-progress-bar": "^5.2.0",
     "@tanstack/react-query": "^5.59.0",
@@ -16,7 +17,8 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "gsap": "^3.12.5",
-    "next": "14.1.4",
+    "next": "^14.2.15",
+    "nodemailer": "^6.9.15",
     "rc-slider": "^10.5.0",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
@@ -36,7 +38,8 @@
     "react-visibility-sensor": "^5.1.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
-    "swiper": "^9.1.1"
+    "swiper": "^9.1.1",
+    "tough-cookie": "^4.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
