--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@devmehq/email-validator-js": "^1.0.19",
     "@emailjs/browser": "^4.3.3",
+    "@next/bundle-analyzer": "^14.2.15",
     "@ramonak/react-progress-bar": "^5.2.0",
     "@tanstack/react-query": "^5.59.0",
     "animate.css": "^4.1.1",
