--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "next": "^14.2.15",
     "nodemailer": "^6.9.15",
     "rc-slider": "^10.5.0",
-    "react": "^18",
+    "react": "npm:@preact/compat@^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-countup": "^6.5.3",
-    "react-dom": "^18",
+    "react-dom": "npm:@preact/compat@^18.3.1",
     "react-fast-marquee": "^1.6.4",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
