--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "next": "^14.2.15",
     "nodemailer": "^6.9.15",
     "rc-slider": "^10.5.0",
-    "react": "npm:@preact/compat@^18.3.1",
+    "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-countup": "^6.5.3",
-    "react-dom": "npm:@preact/compat@^18.3.1",
+    "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.4",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
@@ -37,6 +37,7 @@
     "react-scroll-to-top": "^3.0.0",
     "react-slick": "^0.30.2",
     "react-visibility-sensor": "^5.1.1",
+    "scheduler": "^0.23.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
     "swiper": "^9.1.1",
